--- a/src/components/common/Table/commonTable.scss
+++ b/src/components/common/Table/commonTable.scss
@@ -12,6 +12,8 @@
   }
   &--unsort, &--sort {
     margin-left: auto;
+    display: flex;
+    align-items: center;
     .icon-down, .icon-up {
       opacity: 0.4;
       font-size: 1em;
